--- a/WikiGame/app/src/main/res/layout/activity_register.xml
+++ b/WikiGame/app/src/main/res/layout/activity_register.xml
@@ -5,6 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/btn_registerLogin"
+        android:layout_width="170dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:background="@drawable/reg_btn_style"
+        android:text="login"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ed_regPasswd2" />
+
     <ImageView
         android:id="@+id/img_userPhoto"
         android:layout_width="140dp"
@@ -61,13 +74,13 @@
         app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <EditText
-        android:background="@drawable/reg_edittext_style"
-        android:hint="Confirm Password"
         android:id="@+id/ed_regPasswd2"
         android:layout_width="265dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:background="@drawable/reg_edittext_style"
         android:ems="10"
+        android:hint="Confirm Password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,12 +90,13 @@
         android:id="@+id/btn_reg"
         android:layout_width="170dp"
         android:layout_height="64dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:background="@drawable/reg_btn_style"
         android:text="register"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ed_regPasswd2" />
 
     <ProgressBar
